Fix insertion and removal errors.
All test pass successfully, including inserting and removing 1000
elements in random order 128 times (different order each time...)

--- a/rbtree/rbtree.vcxproj
+++ b/rbtree/rbtree.vcxproj
@@ -131,6 +131,7 @@
     <ClInclude Include="rbtree.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="dump.c" />
     <ClCompile Include="rbtree.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
