Add a RBversion function in the API.
Allows the user of the library to access the version number it is
currently using.

--- a/rbtree/rbtree.vcxproj
+++ b/rbtree/rbtree.vcxproj
@@ -133,6 +133,7 @@
   <ItemGroup>
     <ClCompile Include="dump.c" />
     <ClCompile Include="rbtree.c" />
+    <ClCompile Include="rbversion.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
